2003-02-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/amidxtaped.c: Remove lock 'unlink(conf_logfile)' on
	  all failure path.

2003-02-28  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/changer.c: Sync with 2.4.4.

2003-02-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/client_util.c: Print error except ENOENT for
	  exclude/include files.

2003-02-20  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapetype.c: Use %ld to print some variable.

2003-02-20  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c (init_defaults): conf_printer.s must be set
	  with stralloc("").

2003-02-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* tape-src/tapetype.c: Document -c option.

2003-02-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* changer-src/chg-zd-mtx.sh.in:Print "are you sure your drive slot is n"

2003-02-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/tapefile.c (read_tapelist): return 1 if can't open the
	  tapelist file.

2003-02-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* man/amtapetype.8.in: Add doc from a mail by John R. Jackson.

2003-02-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amcheck.c: New -a option.
	* man/amcheck.8.in: Document it.

2003-02-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amindexd.c (build_disk_table): Compare the level.

2003-02-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* tape-src/tapetype.c: New -c argument to do only the compression test.
	  Better detection of compression.
	* man/amtapetype.8.in: Document -c argument.

2003-02-09  John R. Jackson (jrj@purdue.edu)

	* tape-src/tapetype.c: Allocate the I/O buffers on page boundaries.
	  This helps performance on some OS's.

2003-02-08  John R. Jackson (jrj@purdue.edu)
